<resources>
    <string name="app_name">ADemoMaterialDesign</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>

    <string name="main_card_title">Title goes here</string>
    <string name="main_card_title_short">Title</string>
    <string name="main_card_subtitle">Subtitle here</string>
    <string name="main_card_details">Details here</string>
    <string name="main_card_button_1">ACTION 1</string>
    <string name="main_card_button_2">ACTION 2</string>
    <string name="main_flat_button_1_clicked">Flat Button 1</string>
    <string name="main_flat_button_2_clicked">Flat Button 2</string>

    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="main_dialog_simple">Simple dialog</string>
    <string name="main_dialog_simple_title">A simple dialog</string>


    <string name="main_dialog_single_choice">Single choice dialog</string>
    <string name="main_dialog_multi_choice">Multi choice dialog</string>
    <string name="main_dialog_progress_title">Progress dialog...</string>
    <string name="main_dialog_progress">Progress dialog</string>
    <string name="main_dialog_data_picker">Date Picker Dialog</string>
    <string name="main_dialog_data_time">Time Picker Dialog</string>
    <string name="main_dialog_bottom">Bottom Dialog</string>
    <string name="main_dialog_fullscreen">Fullscreen Dialog</string>
    <string name="main_popup_menu">Popup Menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
