<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                            xmlns:tools="http://schemas.android.com/tools"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            xmlns:app="http://schemas.android.com/apk/res-auto"
                                            app:layout_behavior="@string/appbar_scrolling_view_behavior"
                                            tools:context="com.example.yang.ademomaterialdesign.Main2Fragment">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:paddingTop="16dp"
       android:paddingBottom="16dp"
       android:paddingRight="64dp"
       android:paddingLeft="64dp"
       android:orientation="vertical"
       >

       <Button
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/btn_dialog_1"
           android:backgroundTint="#F44336"
           android:padding="20dp"
           android:text="Simple dialog"
           android:textColor="@android:color/white"
           android:textSize="14sp"
           />
       <Button
           android:id="@+id/btn_dialog_2"
           android:layout_width="match_parent"
           android:backgroundTint="#E91E63"
           android:padding="20dp"
           android:layout_marginTop="14dp"
           android:text="Simple dialog"
           android:textColor="@android:color/white"
           android:textSize="14sp"
           android:layout_height="wrap_content"/>
       <Button
           android:id="@+id/btn_dialog_3"
            android:layout_marginTop="14dp"
           android:backgroundTint="#5FF552"
           android:padding="20dp"
           android:text="Single choice dialog"
           android:textColor="@android:color/white"
           android:textSize="14sp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>
       <Button
           android:id="@+id/btn_dialog_4"
           android:layout_marginTop="14dp"
           android:padding="20dp"
           android:backgroundTint="#4D55df"
           android:textColor="@android:color/white"
           android:textSize="14sp"
           android:text="Mulit choice dailog"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>
       <Button
           android:id="@+id/btn_dialog_5"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="14dp"
           android:backgroundTint="#3dddfd"
           android:textColor="@android:color/white"
           android:textSize="14sp"
           android:text="Progress dialog"
           android:padding="20dp"
           />
       <Button
           android:id="@+id/btn_dialog_6"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="14dp"
           android:backgroundTint="#42533d"
           android:textColor="@android:color/white"
           android:textSize="14sp"
           android:padding="20dp"
           android:text="Progress dialog"
           />
       <Button
           android:id="@+id/btn_dialog_7"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="14dp"
           android:backgroundTint="#4CAF50"
           android:padding="20dp"
           android:text="@string/main_dialog_data_picker"
           android:textColor="@android:color/white"
           android:textSize="14sp"
           />
       <Button
           android:id="@+id/btn_dialog_8"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="14dp"
           android:backgroundTint="#FF9800"
           android:padding="20dp"
           android:text="@string/main_dialog_data_time"
           android:textColor="@android:color/white"
           android:textSize="14sp"
           />
       <Button
           android:id="@+id/btn_dialog_9"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="14dp"
           android:backgroundTint="#FF5722"
           android:padding="20dp"
           android:text="@string/main_dialog_bottom"
           android:textColor="@android:color/white"
           android:textSize="14sp"
           />
       <Button
           android:id="@+id/btn_dialog_10"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="14dp"
           android:backgroundTint="#795548"
           android:padding="20dp"
           android:text="@string/main_dialog_fullscreen"
           android:textColor="@android:color/white"
           android:textSize="14sp"
           />
       <Button
           android:id="@+id/btn_dialog_11"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="14dp"
           android:backgroundTint="#607D8B"
           android:padding="20dp"
           android:text="@string/main_popup_menu"
           android:textColor="@android:color/white"
           android:textSize="14sp" />
   </LinearLayout>

</android.support.v4.widget.NestedScrollView>
